@@ -295,3 +295,7 @@ unsetenv GNUSTEP_USER_LIBRARIES
 unsetenv GNUSTEP_USER_DOC 
 unsetenv GNUSTEP_USER_DOC_MAN
 unsetenv GNUSTEP_USER_DOC_INFO
+
+unsetenv GNUSTEP_SYSTEM_USERS_DIR
+unsetenv GNUSTEP_LOCAL_USERS_DIR
+unsetenv GNUSTEP_NETWORK_USERS_DIR
