@@ -426,6 +426,8 @@ if [ -n "$GNUSTEP_SH_EXPORT_ALL_VARIABLES" ]; then
   export GNUSTEP_USER_APPS GNUSTEP_USER_ADMIN_APPS GNUSTEP_USER_WEB_APPS GNUSTEP_USER_TOOLS GNUSTEP_USER_ADMIN_TOOLS 
   export GNUSTEP_USER_LIBRARY GNUSTEP_USER_HEADERS GNUSTEP_USER_LIBRARIES
   export GNUSTEP_USER_DOC GNUSTEP_USER_DOC_MAN GNUSTEP_USER_DOC_INFO
+
+  export GNUSTEP_SYSTEM_USERS_DIR GNUSTEP_LOCAL_USERS_DIR GNUSTEP_NETWORK_USERS_DIR
 else
   unset GNUSTEP_SYSTEM_APPS 
   unset GNUSTEP_SYSTEM_ADMIN_APPS 
@@ -474,6 +476,10 @@ else
   unset GNUSTEP_USER_DOC 
   unset GNUSTEP_USER_DOC_MAN
   unset GNUSTEP_USER_DOC_INFO
+
+  unset GNUSTEP_SYSTEM_USERS_DIR
+  unset GNUSTEP_LOCAL_USERS_DIR
+  unset GNUSTEP_NETWORK_USERS_DIR
 fi
 
 if [ -n "$GS_ZSH_NEED_TO_RESTORE_SET" ]; then
