@@ -1,5 +1,12 @@
 2008-01-14  Nicola Pero  <nicola.pero@meta-innovation.com>
 
+	* GNUstep.sh.in: Unset GNUSTEP_SYSTEM_USERS_DIR,
+	GNUSTEP_LOCAL_USERS_DIR, GNUSTEP_NETWORK_USERS_DIR at the end, or
+	export them if GNUSTEP_SH_EXPORT_ALL_VARIABLES if set.
+	* GNUstep.csh.in: Unset the same variables at the end.
+
+2008-01-14  Nicola Pero  <nicola.pero@meta-innovation.com>
+
 	* filesystem.sh.in: Fixed typo which was causing
 	GNUSTEP_USER_DIR_WEB_APPS not to be removed from the environment.
 
